app/assets/stylesheets/gto/artists/_artists.scss
@import 'mau-mixins';
@import 'gto/gto-mixins';
.artists, .artists.index, .artists.show, .art_pieces.show {

  @include search-filter;

  #about, #art, .artist-profile {
    @include transition-property( width, height, margin, padding);
    @include transition-duration(0.3s);
    @include transition-timing-function(ease-in-out);
  }

  .scroll-load-more {
    text-align:center;
    margin:auto;
    position: relative;
    z-index: -1;  /* fix issue with fa-spin screwing up zindex */
    .hint {
      letter-spacing:0;
      font-size: 0.9rem;
      font-style: italic;
      color: rgba(200,200,200,0.5);
    }
    .fa-spinner {
      font-size: 100px;
      color: rgba(200,200,200,0.5);
    }
  }
  .art-card, .artist-card {
    @extend .artist-thumb-mixin;
  }
  .art-card, .artist-card {
    .desc { 
      height: 2.5rem;
      padding: 0.1rem;
    }
    .name, .media, .tags {
      height: 1.2rem;
      line-height:1.2rem;
      @include ellipsis;
    }
    .name {
      font-size: 0.9rem;
    }
    .media, .tags {
      font-style: italic;
      font-size: 0.75rem;
    }
    &:hover {
      .desc {
        @include opacity(1);
      }
    }
    .art-card {
      .desc {
        height: 3rem;
      }
    }
    @media (min-width: $screen-sm-min) {
      .desc { 
        @include opacity(0);
      }
    }
  }
}

.art-card, .artist-profile {
  .card__controls {
    position: absolute;
    top: 12px;
    right: 12px;
  }
  .artist-profile__edit, .art-card__delete, .art-card__edit {
    display: inline-block;
    font-size: 32px;
    background-color: rgba(255, 255, 255, .75);
    padding: 4px 8px;
    border-radius: 4px;
    &:hover {
      background-color: rgba(255, 255, 255, .95);
    }
    a, a .fa{
      color: $gto_yellow;
    }
  }
}
.art-card {
  #delete-art & {
    .desc {
      .name {
        display: none;
      }
      .pure-controls {
        padding: 0.6rem;
        font-size: 1.1rem;
      }
      opacity: 1;
    }
  }

  .art-card__delete {
    display: none;
    #edit-art & {
      display: inline-block;
    }
    a, a .fa{
      color: $gto_red;
    }
  }
}

.artist-profile__image {
  text-align: center;
  margin: auto;
  img, i.fa {
    margin: auto;
    text-align: center;
  }
  i.fa.fa-user {
    font-size: 15rem;
  }
}


.artist-profile, #art {
  section {
    font-size: 0.9rem;
    margin-bottom: 20px;
    &.artist__bio {
      position:relative;
      max-height: 200px;
      overflow:hidden;
      &.overflowing .read-more {
        @include opacity(1);
      }
      &.overflowing.open {
        max-height: 100%;
      }
      &.open .read-more {
        .fa {
          @include transform(rotate(180deg));
        }
      }

    }
    .header {
      border-bottom: 1px solid $xlightgray;
      padding: 4px 2px;
      text-transform: uppercase;
      font-size: 0.80rem;
      font-weight: bold;
      margin-bottom: 8px;
    }
    .read-more {
      position: absolute;
      text-align: center;
      bottom: 0;
      right: 0;
      @include transition(all 0.2s ease-in);
      @include opacity(0);
    }
  }
}
.artist-profile {
  position: relative;
  padding: 0 10px 10px;
  .media {
    ul {
      padding-left: 20px;
    }
    li {
      list-style: circle;
    }
  }
  .artist__studio .body {
    > div {
      min-height: 1.4rem;
      line-height: 1.4rem;
    }
  }
  .artist__links .link {
    margin-bottom: 5px;
    @include ellipsis;
    span {
      font-size: 0.8rem;
    }
    .ico {
      font-size: 1.1rem;
      display: inline-block;
      margin-right: 10px;
    }
  }
  .header .title {
    margin-top: 0px;
  }
  .artist-profile__edit {
    top: 0;
  }
  .artist-profile__image {
    width: 100%;
  }
  .artist-links > div {
    @include ellipsis;
    min-height: 1.1rem;
    > span {
      display: inline-block;
      width: 20%;
      min-width: 80px;
    }
  }
  .action-icons {
    margin-top: 20px;
  }
}
.bio-container {
  overflow: auto;
  padding-right: 20px;
  &.empty {
    h4, p {
      color: lighten($gto_gray, 20%);
    }
  }
  p:first-child {
    margin-top: 0;
  }
}
.bio-container, .bio-container p {
  font-size: 0.9rem;
  line-height: 1.2rem;
} 
.artist-profile {
  overflow:hidden;
}
ul.favorite-thumbs, ul.favorite-thumbs li {
  margin:0;
  padding:0;
}
.favorite-thumbs li {
  float: left;
  .artist__favorite-thumb {
    margin: 0.2rem;
    height: 50px;
    width: 50px;
    @include background-cover;
  }
}

.roster {
  .roster__list {
    margin-top: 20px;
  }
  .chunk {
    margin-bottom: 20px;
  }
  .name {
    @include ellipsis;
    line-height: 1.3em;
    height: 1.3em;
  }
  @media screen and (max-width: 48em) {
    .chunk {
      margin-bottom: 0px;
    }
  }

}

